Fix ripple animation for RTL locales
The animation was invisible because it was going out of screen, also
add a mirrored version of the image to the theme.

https://bugzilla.gnome.org/show_bug.cgi?id=584662

--- a/data/theme/gnome-shell.css
+++ b/data/theme/gnome-shell.css
@@ -1280,7 +1280,11 @@ StTooltip StLabel {
 .ripple-box {
     width: 52px;
     height: 52px;
-    background-image: url("corner-ripple.png");
+    background-image: url("corner-ripple-ltr.png");
+}
+
+.ripple-box:rtl {
+    background-image: url("corner-ripple-rtl.png");
 }
 
 .switcher-arrow {
